v2 of html by Kirubel Yishak

--- a/login.html
+++ b/login.html
@@ -25,11 +25,32 @@
       <button type="reset">Forget password?</button>
     </form>
   </div>
+  <!-- V1 Commit-->
   <div>
+
     <div>
-      
+      <h5>Academic <br> Calendar</h5>
     </div>
+    <div>
+      <h5>Registrar <br> Announcement</h5>
+    </div>
+    <div>
+      <h5>Official <br> Transcript</h5>
+    </div>
+    <div>
+      <h5>Online <br> Admission</h5>
+    </div>
+    <div>
+      <h5>Online <br> Admission Tracking</h5>
+    </div>
+    <div>
+      <h5>Alumni <br> Registration</h5>
+    </div>
+    <div>
+      <h5>Forgery <br> Check</h5>
+    </div>
+
   </div>
-  
+  <!--V2 Commit-->
 </body>
 </html>
