v3 of html by Kirubel Yishak

--- a/login.html
+++ b/login.html
@@ -8,45 +8,46 @@
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div>
-    <div>
+  <div class="upside">
+    <div class="divlogo">
       <img src="Image\Logo.gif" id="logo">
-      <h3>AMU | Office of the University Registrar</h3>
+      <h3>AMU | Office of the University <br> Registrar</h3><br>
       <hr>
-      <p>This is our registrar portal for students, academic staffs and alumni to accessdifferent registrar services offered by the office of the university registrar.</p>
+      <p>This is our registrar portal for students, academic staffs and alumni to access different registrar services offered by the office of the university registrar.</p>
     </div>
-    <div>
-      <h4>Login To SMIS</h4>
+    <div class="divlogin">
+      <h4>Login To SMiS</h4>
       <hr><br><br>
-    <form>
-      <input type="text" placeholder="Username"> <br><br>
-      <input type="password" placeholder="password"> <br><br>
+     <form>
+      <input type="text" placeholder="Username" class="label"> <br><br>
+      <input type="password" placeholder="password" class="label"> <br><br>
       <button type="submit" id="login">Login</button><br><br>
-      <button type="reset">Forget password?</button>
-    </form>
+      <button type="reset" id="pass">Forget password?</button>
+     </form>
+    </div>
   </div>
   <!-- V1 Commit-->
-  <div>
+  <div class="downside">
 
-    <div>
+    <div class="divgrid">
       <h5>Academic <br> Calendar</h5>
     </div>
-    <div>
+    <div class="divgrid">
       <h5>Registrar <br> Announcement</h5>
     </div>
-    <div>
+    <div class="divgrid">
       <h5>Official <br> Transcript</h5>
     </div>
-    <div>
+    <div class="divgrid">
       <h5>Online <br> Admission</h5>
     </div>
-    <div>
+    <div class="divgrid">
       <h5>Online <br> Admission Tracking</h5>
     </div>
-    <div>
+    <div class="divgrid">
       <h5>Alumni <br> Registration</h5>
     </div>
-    <div>
+    <div class="divgrid">
       <h5>Forgery <br> Check</h5>
     </div>
 
